--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Build the Docker image
       run: |
         repo_name_lower=$(echo ${{ github.event.repository.name }}| tr [:upper:] [:lower:])
-        tag="synbiohub/${repo_name_lower}:snapshot"
+        tag="geneticlogiclab/${repo_name_lower}:snapshot"
         echo $tag
         docker build . --tag $tag
     - uses: azure/docker-login@v1
@@ -24,6 +24,6 @@ jobs:
     - name: Push the image to Docker Hub
       run: |
         repo_name_lower=$(echo ${{ github.event.repository.name }}| tr [:upper:] [:lower:])
-        tag="synbiohub/${repo_name_lower}:snapshot"
+        tag="geneticlogiclab/${repo_name_lower}:snapshot"
         echo $tag
         docker push $tag
